# Tauri-Postgresql-payroll-management-system

./: package-lock.json  package.json
public/templates/: headerOV-RAP.xlsx  headerOV.xlsx  ovTemplate.xlsx
src/: App.jsx  main.jsx  styles.css  theme.js
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  db.rs  mod.rs
src-tauri/src/models/: db_config.rs  mod.rs  payments.rs  resident.rs  specialty.rs
src/components/: StatBox.jsx
src/data/: mockData.js
src/global/: Sidebar.jsx  Topbar.jsx
src/scenes/calendar/: index.jsx
src/scenes/dashboard/: index.jsx
src/scenes/dbForm/: index.jsx
src/scenes/loginForm/: index.jsx
src/scenes/payments/: index.jsx
src/scenes/rappel/: Rappel.jsx  index.jsx
src/scenes/rappels/: Rappels.jsx
src/scenes/residents/: index.jsx
src/scenes/specialties/: index.jsx
