[package]
name = "projet1"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "dialog-confirm", "shell-open", "dialog-save", "dialog-message", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
bigdecimal = { version = "0.3", features = ["serde"] }
dotenv = "0.15.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


